add buttons and click handlers

--- a/index.html
+++ b/index.html
@@ -31,9 +31,13 @@
             </div>
         </div>
         <div class="ctas">
-            <button class="border-neon-purple">
+            <button class="border-neon-purple" onclick="javascript:openWhatsapp()">
                 <img src="assets/whatsapp.png" alt="Logo do whatsapp">
                 Chamar no whatsapp
+            </button>
+            <button class="border-neon-purple" onclick="javascript:sendMail()">
+                <img src="assets/mail.png" alt="Ícone de carta">
+                Enviar um email
             </button>
         </div>
     </main>
