--- a/index.html
+++ b/index.html
@@ -31,14 +31,26 @@
             </div>
         </div>
         <div class="ctas">
-            <button class="border-neon-purple" onclick="javascript:openWhatsapp()">
+            <button class="border-neon-purple" onclick="javascript:openLink('https:\/\/wa.link\/gt8jst')">
                 <img src="assets/whatsapp.png" alt="Logo do whatsapp">
                 Chamar no whatsapp
             </button>
-            <button class="border-neon-purple" onclick="javascript:sendMail()">
+            <button class="border-neon-purple" onclick="javascript:openLink('mailto:guilhermekodenvis@gmail.com')">
                 <img src="assets/mail.png" alt="Ícone de carta">
                 Enviar um email
-            </button>
+            </button> 
+            <button class="border-neon-purple" onclick="javascript:openLink('https:\/\/www.instagram.com\/devdofront\/')">
+                <img src="assets/instagram.png" alt="Logo do Instagram">
+                Instagram
+            </button> 
+            <button class="border-neon-purple" onclick="javascript:openLink('https:\/\/www.linkedin.com\/in\/guilherme-kodenvis\/')">
+                <img src="assets/linkedin.png" alt="Logo do LinkedIn">
+                LinkedIn
+            </button> 
+            <button class="border-neon-purple" onclick="javascript:openLink('https:\/\/github.com\/guilhermekodenvis')">
+                <img src="assets/github.png" alt="Logo do Github">
+                Github
+            </button> 
         </div>
     </main>
     <script src="script.js"></script>
